--- a/resources/templates/forgot.html
+++ b/resources/templates/forgot.html
@@ -8,8 +8,8 @@
 		<div th:replace="components :: menu"></div>
 		<script>setMenuFocus("Login")</script>
 
-        <div class="container blue-border" style="border-radius: 10px; width: 405px; margin-top: 50px;">
-			<form action="/forgot" method="POST">
+        <div style="padding: 50px 20px 50px 20px;">
+        	<form class="blue-border r-2 pd-3 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="/forgot" method="POST">
 				<h2 style="margin-top: 0; margin-bottom: 40px;">Forgot password</h2>
 				<span>Email:</span>
 				<input type="email" name='email' path="email" required>
