--- a/resources/templates/password.html
+++ b/resources/templates/password.html
@@ -8,8 +8,8 @@
 		<div th:replace="components :: menu"></div>
 		<script>setMenuFocus("Login")</script>
 
-        <div class="container blue-border" style="border-radius: 10px; width: 405px; margin-top: 50px;">
-			<form action="/password" method="POST">
+        <div style="padding: 50px 20px 50px 20px;">
+        	<form class="blue-border r-2 pd-3 fit-content form-grid form-grid-1" style="margin: 0px auto 0px auto;" action="/password" method="POST">
 				<h2 style="margin-top: 0; margin-bottom: 40px;">Change Password</h2>
 				<input style="display: none;" type="text" name='user' path="user" th:value="${param.id}">
 				<span>Old password:</span>
