--- a/resources/static/resources/style.css
+++ b/resources/static/resources/style.css
@@ -651,6 +651,7 @@ textarea{
 }
 
 input[type=submit]{
+	font-size: 18px;
     box-sizing: border-box;
     min-height: 40px;
     height: 40px;
@@ -666,6 +667,7 @@ input:focus, select:focus, textarea:focus{
 }
 
 .button{
+	font-size: 18px;
     display: inline-block;
     box-sizing: border-box;
     background-color: #004dff;
@@ -1213,15 +1215,6 @@ a{
     border: none;
     vertical-align: top;
     background-color: transparent;
-}
-
-@media only screen and (max-width: 1023px){
-	.table-placeholder{
-	 	display: none;
-	}
-	.line-edit-col{
-		padding: 15px 0px;
-	}
 }
 
 .form-grid{
