Improved reloading mechanism

--- a/resources/templates/components.html
+++ b/resources/templates/components.html
@@ -25,8 +25,8 @@
 	<a href="/studio">Dashboard</a>
 	<a href="/studio/stations">Stations</a>
 	<a href="/studio/lines">Lines</a>
-	<a>Line Archive</a>
-	<a>Line Templates</a>
+	<a href="/studio/archived">Archived</a>
+	<a href="/studio/templates">Templates</a>
 	<a href="/studio/users">Users</a>
 	<a>Settings</a>
 </div>
