--- a/resources/templates/station.html
+++ b/resources/templates/station.html
@@ -9,7 +9,7 @@
         <script>setMenuFocus("Stations")</script>
         <script>reload()</script>
 
-        <div class="container">
+        <div class="container" id="reload">
         	<div class="box">
 				<div class="title" style="margin-bottom: 20px;" th:text="${station.name}"></div>
 				<div style="display:flex; gap: 20px;">
