--- a/resources/templates/line.html
+++ b/resources/templates/line.html
@@ -7,9 +7,8 @@
     <body>
 		<div th:replace="components :: menu"></div>
         <script>setMenuFocus("Lines")</script>
-        <script>reload()</script>
 
-        <div class="container">
+        <div class="container" id="reload">
         	<div class="box box-table">
 				<table style="height: 1px;">
 					<tr>
