--- a/resources/templates/studio/archived.html
+++ b/resources/templates/studio/archived.html
@@ -2,19 +2,18 @@
 <html>
     <head>
     	<div th:replace="components :: head"></div>
-        <title>PIS Studio - Lines</title>
-        
+        <title>PIS Studio - Archived</title>
     </head>
     <body>
 		<div th:replace="components :: menu"></div>
 		<script>setMenuFocus("Studio")</script>
 		
 		<div th:replace="components :: navigation"></div>
-		<script>setNavigationFocus("Lines")</script>
+		<script>setNavigationFocus("Archived")</script>
 		<div class="navigation-content">
 			<div style="margin: 0px auto; padding: 50px 50px; max-width: 1200px;">
 				<div style="display: flex;"><div class="width-100"></div>
-					<a class="button mg-b" th:href="@{/studio/lines/edit}">New Line</a>
+					<a class="button mg-b" th:href="@{/studio/archived/edit}">New Line</a>
 				</div>	
 				<div class="overflow r-1 nowrap">
 					<table id="reload">
@@ -40,7 +39,7 @@
 							<td th:text="${line.getLastStation() != null ? line.getLastStation().name : ''}"></td>
 							<td th:text="${line.operator}"></td>
 							<td th:text="${line.driver}"></td>
-							<td><a class="button" th:href="@{'/studio/lines/edit?&id=' + ${line.id}}">Edit</a></td>
+							<td><a class="button" th:href="@{'/studio/archived/edit?&id=' + ${line.id}}">Edit</a></td>
 						</tr>
 					</table>
 				</div>
