--- a/resources/templates/studio/edit/edit_users.html
+++ b/resources/templates/studio/edit/edit_users.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     	<div th:replace="components :: head"></div>
-        <title th:text="'PIS Studio - Edit User'"></title>
+        <title>PIS Studio - Edit User</title>
     </head>
     <body>
 		<div th:replace="components :: menu"></div>
